[gd_scene load_steps=15 format=2]

[ext_resource path="res://Platform/Image/Unit/character_roundGreen.png" type="Texture" id=1]
[ext_resource path="res://Platform/Image/Unit/character_handGreen.png" type="Texture" id=2]
[ext_resource path="res://Platform/Avatar.gd" type="Script" id=3]
[ext_resource path="res://Platform/Image/Unit/item_hat.png" type="Texture" id=4]
[ext_resource path="res://Platform/Image/Unit/item_sword.png" type="Texture" id=5]
[ext_resource path="res://Platform/Image/Unit/item_.png" type="Texture" id=6]
[ext_resource path="res://Platform/Image/Unit/effect_trail.png" type="Texture" id=7]
[ext_resource path="res://Platform/Image/Unit/item_gun.png" type="Texture" id=8]
[ext_resource path="res://Platform/projectile.tscn" type="PackedScene" id=9]
[ext_resource path="res://NixLib/Shoot/Shoot.gd" type="Script" id=10]
[ext_resource path="res://Platform/Image/Tile/tile_heart.png" type="Texture" id=11]
[ext_resource path="res://NixLib/Common/UnitLife.gd" type="Script" id=12]




[sub_resource type="CapsuleShape2D" id=1]
radius = 15.0
height = 30.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.6

[node name="Avatar" type="KinematicBody2D"]
position = Vector2( -130.14, -35.6044 )
script = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Life" type="Node" parent="."]
script = ExtResource( 12 )

[node name="Shoot" type="Node2D" parent="."]
script = ExtResource( 10 )
projectile = ExtResource( 9 )
fires = [ NodePath("Fire") ]

[node name="Fire" type="Node2D" parent="Shoot"]
position = Vector2( 49.9301, 0.875969 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
anims/Attack = SubResource( 2 )

[node name="Head" type="Sprite" parent="Body"]
position = Vector2( -0.0736946, -25.0477 )
texture = ExtResource( 4 )

[node name="Offhand" type="Sprite" parent="Body"]
visible = false
position = Vector2( -28.5994, 3.54929 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="item_sword" type="Sprite" parent="Body/Offhand"]
show_behind_parent = true
position = Vector2( 0.0915165, -22.3864 )
texture = ExtResource( 5 )

[node name="effect_trail" type="Sprite" parent="Body/Offhand/item_sword"]
visible = false
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( -30.7012, 25.9047 )
rotation = -1.57176
z_index = -1
texture = ExtResource( 7 )

[node name="Mainhand" type="Sprite" parent="Body"]
visible = false
show_behind_parent = true
position = Vector2( 21.6144, 6.82561 )
texture = ExtResource( 2 )

[node name="item_" type="Sprite" parent="Body/Mainhand"]
show_behind_parent = true
position = Vector2( 3.68559, -4.29311 )
texture = ExtResource( 6 )

[node name="Gun" type="Node2D" parent="Body"]

[node name="item_gun" type="Sprite" parent="Body/Gun"]
position = Vector2( 18.2901, 2.79497 )
texture = ExtResource( 8 )

[node name="character_handGreen" type="Sprite" parent="Body/Gun"]
position = Vector2( 25.3981, 15.3386 )
texture = ExtResource( 2 )

[node name="character_handGreen2" type="Sprite" parent="Body/Gun"]
position = Vector2( -2.1978, 12.4117 )
texture = ExtResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="LifeBar" type="HBoxContainer" parent="HUD"]
margin_right = 200.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/LifeBar"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 11 )
[connection signal="dead" from="Life" to="." method="_on_Life_dead"]
